[package]
name = "rattler_build_variant_config"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Variant configuration system for rattler-build"

[features]
default = ["parser"]
parser = ["minijinja"]

[dependencies]
# Core serde
serde = { workspace = true }
serde_yaml = { workspace = true }

# Rattler crates
rattler_conda_types = { workspace = true }

# Rattler-build crates
rattler_build_types = { workspace = true }
rattler_build_jinja = { workspace = true }
rattler_build_yaml_parser = { workspace = true }

# YAML parsing
marked-yaml = { workspace = true }

# Template rendering (optional with 'parser' feature)
minijinja = { workspace = true, optional = true }

# Error handling
thiserror = { workspace = true }
miette = { workspace = true }

# Utilities
tracing = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
fs-err = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml", "filters"] }
rstest = { workspace = true }
serial_test = { workspace = true }
rattler_build_yaml_parser = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
