[package]
name = "rattler_build_yaml_parser"
version = "0.1.5"
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "YAML parser with Jinja2 template support for rattler-build, providing shared parsing infrastructure for conditional structures and template values"

[dependencies]
marked-yaml = { workspace = true }
rattler_build_jinja = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
miette = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
