[package]
name = "rattler_git"
version = "0.1.0"
edition = "2021"
authors = ["rattler-build contributors"]
description = "Git operations support for rattler-build"
license = "BSD-3-Clause"
repository = "https://github.com/prefix-dev/rattler-build"

[dependencies]
dashmap = "6.1"
dunce = "1.0"
file-lock = "2.1"
fs-err = { version = "3.0", features = ["tokio"] }
reqwest = { version = "0.12", features = ["blocking"] }
reqwest-middleware = "0.4"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1", features = ["fs", "process", "rt-multi-thread"] }
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
urlencoding = "2.1"
which = "6.0"

[dev-dependencies]
tempfile = "3"
