[package]
name = "py-rattler-build"
version = "0.53.0"
edition = "2024"
license = "BSD-3-Clause"
publish = false

[lib]
name = "rattler_build"
crate-type = ["cdylib"]

[features]
default = ["rustls-tls"]
native-tls = ["rattler-build/native-tls"]
rustls-tls = ["rattler-build/rustls-tls"]

[dependencies]
rattler-build = { path = "../../" }
rattler_build_recipe = { path = "../../crates/rattler_build_recipe" }
rattler_build_jinja = { path = "../../crates/rattler_build_jinja" }
rattler_build_types = { path = "../../crates/rattler_build_types" }
rattler_build_variant_config = { path = "../../crates/rattler_build_variant_config" }
rattler_build_package = { path = "../../crates/rattler_build_package" }
indexmap = "2.12.1"
pyo3 = { version = "0.27.1", features = [
  "abi3-py38",
  "extension-module",
  "multiple-pymethods",
  "chrono",
] }
tokio = { version = "1.48.0", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "process",
] }
rattler_conda_types = "0.42.2"
rattler_config = "0.2.21"
rattler_networking = { version = "0.25.27" }
rattler_solve = "4.1.0"
rattler_virtual_packages = "2.3.2"
clap = "4.5.53"
url = "2.5.7"
chrono = "0.4.42"
rattler_upload = "0.4.5"
rattler_package_streaming = { version = "0.23.19", default-features = false }
miette = "7.6.0"
tempfile = "3.20.0"
serde_yaml = "0.9"
serde_json = "1.0.145"
pythonize = "0.27.0"
thiserror = "2.0.17"
fs-err = "3.1.3"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"

[build-dependencies]
pyo3-build-config = "0.27.1"

# Prevent package from thinking it's in the workspace
[workspace]
# 'local_dependencies' is generated by maturin and needs to be excluded
exclude = ["local_dependencies/rattler-build"]
