[package]
name = "py-rattler-build"
version = "0.58.2"
edition = "2024"
license = "BSD-3-Clause"
publish = false

[lib]
name = "rattler_build"
crate-type = ["cdylib"]

[features]
default = ["rustls-tls"]
native-tls = ["rattler-build/native-tls"]
rustls-tls = ["rattler-build/rustls-tls"]

[dependencies]
rattler-build = { path = "../../" }
rattler_build_recipe = { path = "../../crates/rattler_build_recipe" }
rattler_build_jinja = { path = "../../crates/rattler_build_jinja" }
rattler_build_types = { path = "../../crates/rattler_build_types" }
rattler_build_variant_config = { path = "../../crates/rattler_build_variant_config" }
rattler_build_package = { path = "../../crates/rattler_build_package" }
indexmap = "2.13.0"
pyo3 = { version = "0.28.2", features = [
  "abi3-py38",
  "extension-module",
  "multiple-pymethods",
  "chrono",
] }
tokio = { version = "1.49.0", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "process",
] }
rattler_conda_types = "0.43.5"
rattler_config = "0.3.2"
rattler_networking = { version = "0.26.2" }
rattler_solve = "4.2.6"
rattler_virtual_packages = "2.3.11"
clap = "4.5.60"
url = "2.5.8"
chrono = "0.4.44"
rattler_upload = "0.4.15"
rattler_package_streaming = { version = "0.24.2", default-features = false }
miette = "7.6.0"
tempfile = "3.26.0"
serde_yaml = "0.9"
serde_json = "1.0.149"
pythonize = "0.28.0"
thiserror = "2.0.18"
fs-err = "3.3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"

[build-dependencies]
pyo3-build-config = "0.28.2"

# Prevent package from thinking it's in the workspace
[workspace]
# 'local_dependencies' is generated by maturin and needs to be excluded
exclude = ["local_dependencies/rattler-build"]
