[package]
name = "py-rattler-build"
version = "0.63.1"
edition = "2024"
license = "BSD-3-Clause"
publish = false

[lib]
name = "rattler_build"
crate-type = ["cdylib"]

[features]
default = ["rustls-tls"]
native-tls = ["rattler-build/native-tls"]
rustls-tls = ["rattler-build/rustls-tls"]

[dependencies]
rattler-build = { path = "../../" }
rattler_build_recipe = { path = "../../crates/rattler_build_recipe" }
rattler_build_jinja = { path = "../../crates/rattler_build_jinja" }
rattler_build_types = { path = "../../crates/rattler_build_types" }
rattler_build_variant_config = { path = "../../crates/rattler_build_variant_config" }
rattler_build_package = { path = "../../crates/rattler_build_package" }
rattler_build_script = { path = "../../crates/rattler_build_script" }
indexmap = "2.13.0"
pyo3 = { version = "0.28.2", features = [
  "abi3-py38",
  "extension-module",
  "multiple-pymethods",
  "chrono",
] }
tokio = { version = "1.50.0", features = [
  "rt",
  "macros",
  "rt-multi-thread",
  "process",
] }
rattler_conda_types = "0.44.6"
rattler_config = "0.3.9"
rattler_networking = { version = "0.26.9" }
rattler_solve = "5.2.2"
rattler_virtual_packages = "2.3.18"
clap = "4.6.0"
url = "2.5.8"
chrono = "0.4.44"
rattler_upload = "0.5.7"
rattler_package_streaming = { version = "0.24.9", default-features = false }
miette = "7.6.0"
tempfile = "3.27.0"
serde_yaml = "0.9"
serde_json = "1.0.149"
pythonize = "0.28.0"
thiserror = "2.0.18"
fs-err = "3.3.0"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.18"

[build-dependencies]
pyo3-build-config = "0.28.2"

# Prevent package from thinking it's in the workspace
[workspace]
# 'local_dependencies' is generated by maturin and needs to be excluded
exclude = ["local_dependencies/rattler-build"]

[patch.crates-io]
rattler = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_cache = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_conda_types = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_config = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_digest = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_git = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_index = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_menuinst = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_networking = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_package_streaming = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_prefix_guard = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_redaction = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_repodata_gateway = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_s3 = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_shell = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_solve = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_upload = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
rattler_virtual_packages = { git = "https://github.com/wolfv/rattler", branch = "cep-simplified-variant-selection" }
